--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reelboard",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/zzoozzzz/mp2.git",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.0",
@@ -11,8 +12,10 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/react-router-dom": "^5.3.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
