--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reelboard",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/zzoozzzz.io/mp2",
+  "homepage": "https://zzoozzzz.github.io/mp2",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.0",
